infrastructure/services/dev/dev-platform/policies/tests/pods/patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: engine-x-e2e-12-asp-x-vcluster
  namespace: dev-platform
  labels:
    app: asp-engine
    vcluster.loft.sh/managed-by: vcluster
    vcluster.loft.sh/namespace: e2e-12-asp
spec:
  priorityClassName: dev
  priority: -1000
  preemptionPolicy: Never
  imagePullSecrets:
    - name: harbor-e2e-pull
  containers:
    - name: app
      image: nginx
